Múltiples errores de diseño arreglados (ver documento "Errores diseño" compartido en drive.

--- a/principal/templates/cookies_policies.html
+++ b/principal/templates/cookies_policies.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-{% block title %} Cookies policies {% endblock %}
+{% block title %} Cookies policy {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <h1 style="text-align: center">Uso de cookies en Acme BrainTravel</h1>
+        <div class="col-lg-12 text-justify">
             <h2>Pol&iacute;tica de Cookies</h2>
             <p>
                 Nuestra pol&iacute;tica de cookies est&aacute; sujeta a actualizaciones peri&oacute;dicas. Su prop&oacute;sito es ayudarle a
@@ -14,7 +13,7 @@
             <p>
                 Los usuarios pueden acceder a esta informaci&oacute;n en todo momento a trav&eacute;s del link habilitado en la web.
             </p>
-            <h2>&iquest;Qu&eacute; es una Cookie?</h2>
+            <h3>&iquest;Qu&eacute; es una Cookie?</h3>
             <p>
                 Una &ldquo;Cookie&rdquo; es un peque&ntilde;o archivo de texto que un sitio web almacena en el navegador del
                 usuario. Las cookies facilitan el uso y la navegaci&oacute;n por una p&aacute;gina web y son esenciales para el
@@ -44,12 +43,11 @@
 
                 diferente al que se accede.
             </p>
-            <h2>Cookies comunes de los sitios de braintravel.com</h2>
+            <h3>Cookies comunes de los sitios de braintravel.com</h3>
             <p>
                 En los siguientes puntos recogen las cookies utilizadas por todos los sitios que abarca el
                 estudio, tanto las de la propia aplicaci&oacute;n como las de terceros:
             </p>
-            <p>
                 <ul>
                     <li>
                         Cookie de sesi&oacute;n (&ldquo;sessionid&rdquo;): Sirve para identificar inequ&iacute;vocamente a cada usuario
@@ -66,8 +64,8 @@
                         ha aceptado ya la pol&iacute;tica de cookies del sitio.
                     </li>
                 </ul>
-            </p>
-            <h2>Deshabilitar el uso de cookies</h2>
+            
+            <h3>Deshabilitar el uso de cookies</h3>
             <p>
                 Si el usuario as&iacute; lo desea, es posible dejar de aceptar las Cookies del navegador, o dejar de
                 aceptar las Cookies de un servicio en particular.
