--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -9,7 +9,7 @@
 				</h4>
                 <br>
 				<p class="text-muted"><a href="/i18n/change_language?language=es">Espa&ntilde;ol</a> | <a href="/i18n/change_language?language=en">English</a></p>
-                <p class="text-muted"><a href="/cookies_policies">Cookies policies</a> | <a href="/about_us">About us</a> | <a href="/privacy_terms">Privacy terms</a></p>
+                <p class="text-muted"><a href="/cookies_policy">Cookies policy</a> | <a href="/about_us">About us</a> | <a href="/privacy_terms">Privacy terms</a></p>
 				<p class="text-muted">Copyright &copy; BrainTravel 2015</p>
 				<img src="{% static "img/powered_fs.png" %}" alt="BrainTravel is powered by Foursquare"/>
 			</div>
