--- a/principal/templates/privacy_terms.html
+++ b/principal/templates/privacy_terms.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <h1 style="text-align: center">T&eacute;rminos y condiciones</h1>
+        <div class="col-lg-12 text-justify">
+            <h2>T&eacute;rminos y condiciones</h2>
             <p>
                 De acuerdo con las disposiciones de la Ley 15/1999, de 13 de Diciembre, de Protecci&oacute;n de
 
@@ -20,7 +20,7 @@
 
                 formularios de la finalidad y uso de los datos que proporcione.
             </p>
-            <h2>Informaci&oacute;n: Alta de Datos</h2>
+            <h3>Informaci&oacute;n: Alta de Datos</h3>
             <p>
                 Los datos facilitados por Usted en los documentos del sitio web, ser&aacute;n objeto de tratamiento
 
@@ -54,7 +54,7 @@
 
                 el art&iacute;culo 5.4 de la misma.
             </p>
-            <h2>Condiciones del servicio</h2>
+            <h3>Condiciones del servicio</h3>
             <ol>
                 <li>
                     El usuario o visitante de la p&aacute;gina web <a href="http://www.braintravel.com">http://www.braintravel.com</a> tiene la obligaci&oacute;n
