--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -220,3 +220,10 @@ body {
   /* Set the fixed height of the footer here */
   height: 170px;
 }
+
+/*Estilo personalizado para ventanas modales*/
+.modal-bt{
+	border-radius: 0px;
+	text-align: center;
+	font-weight: bold;
+}
