--- a/principal/templates/about_us.html
+++ b/principal/templates/about_us.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <h1 style="text-align: center">Sobre nosotros</h1>
+        <div class="col-lg-12 text-justify">
+            <h2>Sobre nosotros</h2>
             <p>
             <a href="http://www.braintravel.com">http://www.braintravel.com</a> es propiedad de BrainTravel Co.
             </p>
