--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -8,7 +8,7 @@
     {% load staticfiles %}
     {% load i18n %}
 
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/custom.css" %}">
     <link rel="stylesheet" href="{% static "css/animate.css" %}">
     <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
@@ -41,20 +41,6 @@
 <body>
     <!-- Navigation -->
 	{% include "miscellaneous/menu.html" %}
-
-    <div class="collapse" id="collapseExample">
-        <div class="well">
-            <form action="/search_trip/" method="POST" role="search">
-                {% csrf_token %}
-                <div class="input-group">
-                    <input type="search" id="input-search" class="form-control" name="title" placeholder="Type to search" value="{{ title_search }}">
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="reset" data-toggle="collapse" href="#collapseExample"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                </div>
-            </form>
-        </div>
-    </div>
 
     {% block content %} {% endblock %}
 
