--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -8,7 +8,7 @@
     {% load staticfiles %}
     {% load i18n %}
 
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
     <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
     <link rel="stylesheet" href="{% static "css/animate.css" %}">
