--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -1,34 +1,40 @@
 {% extends 'base.html' %}
 {% block title %} History coin {% endblock %}
 {% block content %}
+{% load i18n %}
+
+
 <div class="container">
-    {% load i18n %}
-
-    <div class="text-center">
-        <h2>{% trans "List of my coin history" %}</h2>
+    <div class="row">
+        <div class="col-xs-12">
+		    <div>
+		        <h2>{% trans "Coin historial" %}</h2>
+		        <p>{% trans "Those are movements that you made with your coins through the platform" %}
+		    </div>
+		
+		    {% if not list_coin_history %}
+		        <h4>{% trans "We couldn't find anything..." %}</h4>
+		    {% endif %}
+		
+		    <table class="table table-striped">
+		        <thead>
+		        <tr>
+		            <th>{% trans "Amount" %}</th>
+		            <th>{% trans "Date" %}</th>
+		            <th>{% trans "Concept" %}</th>
+		        </tr>
+		        </thead>
+		        <tbody>
+		        {% for coin_history in list_coin_history %}
+		            <tr>
+		                <td>{{ coin_history.amount|safe }}</td>
+		                <td>{{ coin_history.date|date:"D d M Y"|safe }}</td>
+		                <td>{{ coin_history.concept|safe }}</td>
+		            </tr>
+		        {% endfor %}
+		        </tbody>
+		    </table>
+		</div>
+		</div>
     </div>
-
-    {% if not list_coin_history %}
-        <h4>{% trans "We couldn't find anything..." %}</h4>
-    {% endif %}
-
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>{% trans "Amount" %}</th>
-            <th>{% trans "Date" %}</th>
-            <th>{% trans "Concept" %}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for coin_history in list_coin_history %}
-            <tr>
-                <td>{{ coin_history.amount|safe }}</td>
-                <td>{{ coin_history.date|date:"D d M Y"|safe }}</td>
-                <td>{{ coin_history.concept|safe }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
 {% endblock %}
