--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -42,7 +42,7 @@
 					name="title" placeholder="Type to search"> <span
 					class="input-group-btn">
 					<button class="btn btn-danger" type="reset" data-toggle="collapse">
-						<span class="glyphicon glyphicon-remove"></span>
+						<span class="fa fa-times"></span>
 					</button>
 				</span>
 			</div>
