--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -5,7 +5,7 @@
 <li>
     <a id="sign_ind_nav" href="/planner/list_venues/">
         <span class="fa fa-file-text"></span>
-        <strong>Planner</strong>
+        <strong>Plan a trip</strong>
     </a>
 </li>
 
@@ -18,24 +18,24 @@
 
 <li class="dropdown">
      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <span class="glyphicon glyphicon-plane"></span>
+        <span class="fa fa-plane"></span>
 		<strong>Trips</strong>
-        <span class="glyphicon glyphicon-chevron-down"></span>
+        <span class="fa fa-chevron-down"></span>
     </a>
     <ul class="dropdown-menu">
-        <li><a id="sign_ind_nav" href="/trip/create"><i class="fa fa-plus"></i> New trip </a></li>
+        <li><a id="sign_ind_nav" href="/trip/create"><i class="fa fa-plus"></i> Publish trip </a></li>
         <li><a id="sign_ind_nav" href="/trip/mylist"><i class="fa fa-plane"></i> My trips </a></li>
-        <li><a id="sign_ind_nav" href="/trip/planned_trips"><span class="fa fa-file-text"></span> My planned trips</a></li>
-        <li><a id="sign_ind_nav" href="/trip/draft"><i class="fa fa-archive"></i> My draft trips</a></li>
+        <li><a id="sign_ind_nav" href="/trip/planned_trips"><span class="fa fa-list-ol"></span> My planned trips</a></li>
+        <li><a id="sign_ind_nav" href="/trip/draft"><i class="fa fa-archive"></i> Drafts</a></li>
     </ul>
 </li>
 
 
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <span class="glyphicon glyphicon-user"></span>
+        <span class="fa fa-user"></span>
 		<strong>{{ user.traveller.first_name }}</strong>
-        <span class="glyphicon glyphicon-chevron-down"></span>
+        <span class="fa fa-chevron-down"></span>
     </a>
 	<ul class="dropdown-menu">
 		<li>
