--- a/principal/templates/my_payments.html
+++ b/principal/templates/my_payments.html
@@ -1,36 +1,41 @@
 {% extends 'base.html' %}
 {% block title %} Payments {% endblock %}
 {% block content %}
+{% load i18n %}
+
 <div class="container">
-    {% load i18n %}
-
-    <div class="text-center">
-        <h2>{% trans "List of all my payments" %}</h2>
-    </div>
-
-    {% if not list_payments %}
-        <h4>{% trans "We couldn't find anything..." %}</h4>
-    {% endif %}
-
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>{% trans "Id" %}</th>
-            <th>{% trans "Amount" %}</th>
-            <th>{% trans "Date" %}</th>
-            <th>{% trans "Concept" %}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for payment in list_payments %}
-            <tr>
-                <td>{{ payment.id|safe }}</td>
-                <td>{{ payment.amount|safe }}</td>
-                <td>{{ payment.date|date:"D d M Y"|safe }}</td>
-                <td>{{ payment.coinhistory.concept|safe }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-xs-12">
+		    <div>
+		        <h2>{% trans "Payment historial" %}</h2>
+	           <p>{% trans "Those are payments that made through the platform to buy coins" %}
+		    </div>
+		
+		    {% if not list_payments %}
+		        <h4>{% trans "We couldn't find anything..." %}</h4>
+		    {% endif %}
+		
+		    <table class="table table-striped">
+		        <thead>
+		        <tr>
+ 		            <!-- <th>{% trans "Id" %}</th> -->
+		            <th>{% trans "Amount" %}</th>
+		            <th>{% trans "Date" %}</th>
+		            <th>{% trans "Concept" %}</th>
+		        </tr>
+		        </thead>
+		        <tbody>
+		        {% for payment in list_payments %}
+		            <tr>
+		                <!-- <td>{{ payment.id|safe }}</td> -->
+		                <td>{{ payment.amount|safe }}</td>
+		                <td>{{ payment.date|date:"D d M Y"|safe }}</td>
+		                <td>{{ payment.coinhistory.concept|safe }}</td>
+		            </tr>
+		        {% endfor %}
+		        </tbody>
+		    </table>
+		</div>
+	</div>
 </div>
 {% endblock %}
