--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -50,13 +50,12 @@
                 </div>
 
                 <div class="form-group text-center">
-                    <h3>{% trans "Price" %} <span id="tripPrice">?</span> {% trans "Coins" %}</h3>
-                    <h3>{% trans "My coins" %}: <span id="myCoins">{{traveller.coins}}</span> {% trans "Coins" %}</h3>
+                    <h4>{% trans "Price" %} <span id="tripPrice">-</span> {% trans "Coins" %}</h4>
+                    <h4>{% trans "You have" %}: <span id="myCoins">{{traveller.coins}}</span> {% trans "coins" %}</h4>
                 </div>
 
                 <div class="form-group">
-                    <input id="create_plan" class="btn btn-primary" name="save" value="Create Plan"
-                           type="submit" onclick=whileLoading()>
+                    <input id="create_plan" class="btn btn-primary btn-block" name="save" value="Create Plan" type="submit" onclick=whileLoading()>
                 </div>
 
 
