--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -42,16 +42,16 @@
                     {% if traveller.id == user.traveller.id %}
                     <h2><strong> <i class="fa fa-money"></i> {{traveller.coins}} </strong></h2>
                     <p><small>Coins</small></p>
-                    <a href="/coin/list/" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> History coins </a>
+                    <button class="btn btn-info btn-block" onclick="window.location.href='/coin/list/'">View coin movements</button>
                     {% endif %}
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <h2><strong><i class="fa fa-globe"></i> {{ trips }}</strong></h2>
                     <p><small>Trips</small></p>
                     {% if traveller.id == user.traveller.id %}
-                        <a href="/trip/mylist/" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> My Trips </a>
+                        <button class="btn btn-info btn-block" onclick="window.location.href='/trip/mylist/'">View my trips</button>
                     {% else %}
-                        <a href="/trip/list/{{ traveller.id }}" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> Your Trips </a>
+                        <button class="btn btn-info btn-block" onclick="window.location.href='/trip/list/{{ traveller.id }}'">Trips published by {{traveller.first_name}}</button>
                     {% endif %}
                 </div>
             </div>
