--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 {% block title %} Sign in {% endblock %}
 {% block content %}
+{% load i18n %}
+
 <div class="container-fluid">
 
     <div class="omb_login col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
             <div class="omb_authTitle">
-                Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a>
+                <p>{% trans "Login" %}</p>
+                <p class="small">{% trans "Don't have an account yet?" %}<a href="#" data-toggle="modal" data-target="#registerModal"> {% trans "Sign up" %}</a></p>
+            </div>
+            <div>
+                
             </div>
             {% if form.errors %}
                 <div class="alert alert-danger alert-dismissible col-xs-12 col-sm-12 col-md-12 col-lg-12" role="alert">
@@ -50,7 +56,7 @@
     
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
-            <div class="modal-content">
+            <div class="modal-content modal-bt">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
