Solucionados varios Bugs en el algoritmos de planificación.

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -138,26 +138,12 @@
 				<span id="js-rotating">
 					{% blocktrans trimmed %}
 					I really like this idea of the
-					project
-					{% endblocktrans %}
-					;
-					{% blocktrans trimmed%}
-					I love to travel and see the city from a point of view
-					"quotidian", not touristy.
-					{% endblocktrans %}
-					; 
-					{% blocktrans trimmed %}
-					If you can recommend activities outside
+					project;I love to travel and see the city from a point of view
+					"quotidian", not touristy.;If you can recommend activities outside
 					the typical, to better understand the place, would be happy to use
-					the tool.
+					the tool.;There's history, places and landscapes that only
+					residents of the area known.;That's what I ever wanted...
 					{% endblocktrans %}
-					;
-					{% blocktrans trimmed %}
-					There's history, places and landscapes that only
-					residents of the area known.
-					{% endblocktrans %}
-					;
-					{% trans "That's what I ever wanted..." %}
                 </span>
 			</h1>
 		</div>
