Error de diseño cuando se muestran errores en la pantalla de login.

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -25,6 +25,7 @@
                         {{ form.visible_fields.1.errors }}
                     {% endif %}
                 </div>
+                <div class="clearfix"></div>
             {% endif %}
             {% csrf_token %}
             <div class="form-group">
