--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 <div class="container-fluid">
-    <div class="omb_login col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    <div class="omb_login col-xs-12 col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
         <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
             <div class="omb_authTitle">
                 <p>{% trans "Login" %}</p>
@@ -14,7 +14,7 @@
                 
             </div>
             {% if form.errors %}
-                <div class="alert alert-danger alert-dismissible col-xs-12 col-sm-12 col-md-12 col-lg-12" role="alert">
+                <div class="alert alert-danger alert-dismissible col-xs-12" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     {% if  form.visible_fields.0.errors %}
                         <strong>Email</strong>
@@ -61,42 +61,44 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
                 </div>
-                <div class="modal-body row">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-10">
-                        <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post" data-toggle="validator" role="form">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon">
-                                        <span class="fa fa-user"></span>
-                                    </div>
-                                    <input  type="text" class="form-control" id="first_name" name="first_name" placeholder="Name" required />
-                                </div>
-                                <span class="help-block with-errors"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon">
-                                        <span class="fa fa-envelope"></span>
-                                    </div>
-                                    <input type="email" id="email" name="username" class="form-control" data-error="Invalid email address" placeholder="email address" required />
-                                </div>
-                                <span class="help-block with-errors"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label><input type="checkbox" name="terms" required> I agree with the <a href="/privacy_terms">Terms and Conditions</a>.</label>
-                                <span class="help-block with-errors"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <button type="submit" id="singUp-button" class="btn btn-lg btn-primary btn-block">Sign up</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-sm-1"></div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+		                    <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+		                        <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post" data-toggle="validator" role="form">
+		                            {% csrf_token %}
+		                            <div class="form-group">
+		                                <div class="input-group">
+		                                    <div class="input-group-addon">
+		                                        <span class="fa fa-user"></span>
+		                                    </div>
+		                                    <input  type="text" class="form-control" id="first_name" name="first_name" placeholder="Name" required />
+		                                </div>
+		                                <span class="help-block with-errors"></span>
+		                            </div>
+		
+		                            <div class="form-group">
+		                                <div class="input-group">
+		                                    <div class="input-group-addon">
+		                                        <span class="fa fa-envelope"></span>
+		                                    </div>
+		                                    <input type="email" id="email" name="username" class="form-control" data-error="Invalid email address" placeholder="email address" required />
+		                                </div>
+		                                <span class="help-block with-errors"></span>
+		                            </div>
+		
+		                            <div class="form-group">
+		                                <label><input type="checkbox" name="terms" required> I agree with the <a href="/privacy_terms" target="_blank">Terms and Conditions</a>.</label>
+		                                <span class="help-block with-errors"></span>
+		                            </div>
+		
+		                            <div class="form-group">
+		                                <button onclick="register_traveller()" type="button" id="singUp-button" class="btn btn-lg btn-primary btn-block">Sign up</button>
+		                            </div>
+		                        </form>
+		                    </div>
+		                </div>
+		            </div>
                 </div>
             </div>
         </div>
@@ -155,13 +157,10 @@
 	    }
 	});
 	
-	$('#traveller-registration').on('submit', function(event){
-	    event.preventDefault();
-		$('#singUp-button').hide();
-	    register_traveller();
-	});
 	
 	function register_traveller() {
+		$('#singUp-button').hide();
+		
 		$.ajax({
 	        url : "/register_traveller/", // the endpoint
 	        type : "POST", // http method
