--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} My trips {% endblock %} 
+{% extends 'base.html' %} {% block title %} Plan details {% endblock %} 
 {% block content %} {% load i18n %} {% load staticfiles %}
 <div class="container">
     <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -32,7 +32,9 @@
     </div>
     <h2>{{trip.day_set.count}} days in {{trip.city}}, {{trip.country}}</h2>
     <p>Click on the day indicator to show te corresponding plan</p>
-
+    <div class="visible-xs">
+        <p>Click on the venue names to view its details.</p>
+    </div>
     <div class="panel-group" id="accordion" role="tablist"
         aria-multiselectable="true">
         {% for day in trip.day_set.all %}
@@ -40,7 +42,7 @@
             class="panel panel-{% cycle 'primary' 'success' 'info' 'warning' 'danger' %}">
             <div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion"
+                    <a class="day-switcher" data-toggle="collapse" data-parent="#accordion"
                         href="#collapse{{day.numberDay}}" aria-expanded="true"
                         aria-controls="collapse{{day.numberDay}}">Day {{day.numberDay}}</a>
                 </h4>
@@ -55,21 +57,14 @@
                     </h3>
                     <div class="row text-center">
                         {% for venue in day.venues.all %} {% if not venue.is_food%}
-                        <div class="col-sm-3 col-xs-6 clearfix">
+                        <div class="col-sm-3 col-xs-6 venue-details">
                             <img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-                            <h4><a href="/venue_details/{{ venue.id }}" >{{venue.name}}</a></h4>
-                            <a onclick="loadDataModalChangeVenue({{venue.id}}, {{day.id}});" id="changeVenue" type="button" class="btn btn-default" data-toggle="modal" data-target="#changeVenueModal">
-                            	<span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span>
+                            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="Click here to view details">{{venue.name}}</a></h4>
+                            <a onclick="loadDataModalChangeVenue({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeVenueModal">
+                            	<i class="fa fa-exchange"></i> Change this
                             </a>
                         </div>
-                        
-                        {% if forloop.counter|divisibleby:2 %}
-						<div class="clearfix visible-xs-block"></div>
-						{% endif %}
-						
-						{% if forloop.counter|divisibleby:4 %}
-						<div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
-						{% endif %} {% endif %} {% endfor %}
+                         {% endif %} {% endfor %}
                     </div>
 
                     <h3>
@@ -77,22 +72,17 @@
                         you to eat on day {{day.numberDay}}
                     </h3>
                     <div class="row text-center">
-                        {% for venue in day.venues.all %} {% if venue.is_food%}
-                        <div class="col-sm-3 col-xs-6 clearfix">
+                        {% for venue in day.venues.all %} {% if venue.is_food %}
+                        <div class="col-sm-3 col-xs-6">
                             <img src="{{venue.photo}}"
                                 class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4><a href="/venue_details/{{ venue.id }}" >{{venue.name}}</a></h4>
-                            <a onclick="loadDataModalChangeFood({{venue.id}}, {{day.id}});" id="changeVenue" type="button" class="btn btn-default" data-toggle="modal" data-target="#changeFoodModal">
-                            	<span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span>
+                            
+                            <a onclick="loadDataModalChangeFood({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeFoodModal">
+                                <i class="fa fa-exchange"></i> Change this
                             </a>
                         </div>
-                        {% if forloop.counter|divisibleby:2 %}
-						<div class="clearfix visible-xs-block"></div>
-						{% endif %}
-						
-						{% if forloop.counter|divisibleby:4 %}
-						<div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
-						{% endif %} {% endif %} {% endfor %}
+                        {% endif %} {% endfor %}
                     </div>
                 </div>
             </div>
@@ -101,16 +91,16 @@
     </div>
     
     <div class="modal fade" id="changeVenueModal" tabindex="-1" role="dialog" aria-labelledby="VenueModal" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
+        <div class="modal-dialog">
+            <div class="modal-content modal-bt">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Current Venue</h4>
+                    <h4 class="modal-title" id="myModalLabel">Change venue</h4>
                 </div>
                 <div class="modal-body row">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-10">
-                    	<div class="col-sm-12 col-xs-6">
+                    <div class="col-sm-10 col-sm-offset-1">
+                    	<div class="col-xs-12">
+                    	    <p>This is the venue that you're changing</p>
                             <img id="imageVenueToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4 id="nameCurrentVenue">Name</h4>
                         </div>
@@ -121,35 +111,36 @@
                         	<input type="hidden" id="dayVenue" name="day" value="" />
                         	<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
                         	
-	                        <select id="selectNewVenue" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="Choose a new venue...">
-	                        	<option></option>
-	                        	{% for v in trip.possible_venues.all %}
-	                        		{% if not v.is_food %}
-	                        			<option value="{{v.id}}">{{v.name}}</option>
-	                        		{% endif %}
-	                        	{%endfor%}
-	                        </select>
-	                        <button class="btn btn-primary">Change!</button>
+                        	<div class="form-group">
+                        	   <select id="selectNewVenue" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="Choose a new venue...">
+	                                <option></option>
+	                                {% for v in trip.possible_venues.all %}
+	                                    {% if not v.is_food %}
+	                                        <option value="{{v.id}}">{{v.name}}</option>
+	                                    {% endif %}
+	                                {%endfor%}
+	                            </select>
+                        	</div>
+        
+	                        <button class="btn btn-primary btn-block">Change!</button>
 						</form>
-                        
                     </div>
-                    <div class="col-sm-1"></div>
                 </div>
             </div>
         </div>
     </div>
     
     <div class="modal fade" id="changeFoodModal" tabindex="-1" role="dialog" aria-labelledby="FoodModal" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
+        <div class="modal-dialog">
+            <div class="modal-content modal-bt">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="foodModal">Current Venue</h4>
                 </div>
                 <div class="modal-body row">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-10">
-                    	<div class="col-sm-12 col-xs-6">
+                    <div class="col-sm-10 col-sm-offset-1">
+                    	<div class="col-xs-12">
+                    	    <p>This is the venue that you're changing</p>
                             <img id="imageFoodToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4 id="nameCurrentFood">Name</h4>
                         </div>
@@ -159,19 +150,22 @@
                         	<input type="hidden" id="oldFood" name="oldVenue" value="" />
                         	<input type="hidden" id="dayFood" name="day" value="" />
                         	<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
-	                        <select id="selectNewFood" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="Choose a new venue...">
-	                        	<option></option>
-	                        	{% for v in trip.possible_venues.all %}
-	                        		{% if v.is_food %}
-	                        			<option value="{{v.id}}">{{v.name}}</option>
-	                        		{% endif %}
-	                        	{% endfor %}
-	                        </select>
-	                        <button class="btn btn-primary" type="submit">Change!</button>
+	                        
+	                        <div class="form-group">
+		                        <select id="selectNewFood" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="Choose a new venue...">
+		                        	<option></option>
+		                        	{% for v in trip.possible_venues.all %}
+		                        		{% if v.is_food %}
+		                        			<option value="{{v.id}}">{{v.name}}</option>
+		                        		{% endif %}
+		                        	{% endfor %}
+		                        </select>
+		                    </div>
+		                    
+	                        <button class="btn btn-primary btn-block" type="submit">Change!</button>
 						</form>
                         
                     </div>
-                    <div class="col-sm-1"></div>
                 </div>
             </div>
         </div>
@@ -182,10 +176,15 @@
     <script>
     
     $(function() {
+    	$('[data-toggle="tooltip"]').tooltip();
  		$('.chosen-select').chosen();
  		$('.chosen-select-deselect').chosen({ allow_single_deselect: true });
  		//$("#selectNewVenue").trigger("chosen:updated");
  	});
+    
+    $('.day-switcher').click(function(e){
+    	$(window).scrollTop($('#accordion').offset().top);
+    });
     
     function changeModalPhoto(id_venue){
 		$.ajax({
