Patron de las fechas cambiado

--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -28,7 +28,7 @@
 		        {% for coin_history in list_coin_history %}
 		            <tr>
 		                <td>{{ coin_history.amount|safe }}</td>
-		                <td>{{ coin_history.date|date:"D d M Y"|safe }}</td>
+		                <td>{{ coin_history.date|date:"d/m/Y"|safe }}</td>
 		                <td>{{ coin_history.concept|safe }}</td>
 		            </tr>
 		        {% endfor %}
