--- a/principal/templates/stats.html
+++ b/principal/templates/stats.html
@@ -2,6 +2,23 @@
 {% block title %} Statistics {% endblock %}
 {% block content %}
 <div class="container">
-    
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="well">
+                <div class="row">
+                  <div class="col-xs-6 col-md-3">
+                    {% for traveller in travellers_travelling %}
+                    <a href="#" class="thumbnail">
+                      <img src="/{{traveller.photo}}">
+                    </a>
+                    <div class="caption">
+                        <h3>{{ traveller.first_name }} {{ traveller.last_name }}</h3>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
