3 fallos de drive solucionados. Ahora se redirecciona al perfil cuando se loquea una persona

--- a/principal/templates/error_planning.html
+++ b/principal/templates/error_planning.html
@@ -6,11 +6,11 @@
     <h1>{% trans "Sorry, an error has ocurred" %}</h1>
     	{% blocktrans trimmed %}
         <p>
-        	Oops! BrainTravel has not been able to get a plan for you :(. Try it again with the name of the city in English. 
+        	Oops! BrainTravel has not been able to get a plan for you :(. Try it again with the name of the city and country in English.
         	This operation will have <b>NO</b> charge for your coins.
         </p>
         <p>
-        	If the error persist, please contact us!.
+        	If the error persist, please contact us.
         </p>
         {% endblocktrans %}
         
