--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -174,6 +174,14 @@
             format: 'dd/mm/yyyy',
             autoclose: true
         });
+
+        $('#form-create').change(function(){
+            if ($('#id_country').val() == '' || $('#id_city').val() == '' || $('#id_days').val() == '' || $('#id_startDate').val() == '') {
+                $('#create_plan').prop('disabled', true);
+            }else{
+                $('#create_plan').prop('disabled', false);
+            }
+        });
     });
 </script>
 
