--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -213,17 +213,19 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 260px;
+  margin-bottom: 225px;
+  paddin-botton: 3rem;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 260px;
+  height: 225px;
   background-color: #f5f5f5;
 }
-.padding-control {
-	padding-top: 55px;
-	paddin-botton: 5rem;
+
+.search-div{
+	border-radius: 0px;
+    margin-top: 55px;
 }
