Más títulos de páginas centrados y vista de detalles de planificacion arreglada.

--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -2,58 +2,61 @@
 {% block title %} Edit Password {% endblock %}
 {% block content %}
 <div class="container">
-    <h1>Edit Password</h1>
-    {% if form.errors %}
-        <div class="alert alert-danger alert-dismissible col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            {% if  form.visible_fields.0.errors%}
-                <strong>Old password</strong>
-                {{ form.visible_fields.0.errors }}
-            {% endif %}
-            {% if  form.visible_fields.1.errors%}
-                <strong>New password</strong>
-                {{ form.visible_fields.1.errors }}
-            {% endif %}
-            {% if  form.visible_fields.2.errors%}
-                <strong>Repeat new password</strong>
-                {{ form.visible_fields.2.errors }}
-            {% endif %}
-        </div>
-    {% endif %}
-    <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
-        <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
-                <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="id_old_password" class="control-label">Old password:</label>
-                        {{ form.visible_fields.0 }}
-                        <div class="help-block with-errors"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_password" class="control-label">New password:</label>
-                        {{ form.visible_fields.1 }}
-                        <div class="help-block with-errors"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_password_repeat" class="control-label">Repeat new password:</label>
-                        {{ form.visible_fields.2 }}
-                        <div class="help-block with-errors"></div>
-                    </div>
-                    {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
-                    <div class="form-group">
-                        <input class="btn btn-primary" value="Save Changes" type="submit">
-                        <span></span>
-                        <a href="/profile/{{ form.id.value }}" class="btn btn-default">Cancel</a>
-                    </div>
-                    <div class="alert alert-warning alert-dismissible form-group" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <i class="glyphicon glyphicon-warning-sign fa-1x"></i>
-                        <strong>The passwords</strong> must contain at least one uppercase, a lowercase letter and a number.
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="row">
+        <div class="text-center">
+	       <h1>Edit Password</h1>
+	    </div>
+	    {% if form.errors %}
+	        <div class="alert alert-danger alert-dismissible col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10" role="alert">
+	            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	            {% if  form.visible_fields.0.errors%}
+	                <strong>Old password</strong>
+	                {{ form.visible_fields.0.errors }}
+	            {% endif %}
+	            {% if  form.visible_fields.1.errors%}
+	                <strong>New password</strong>
+	                {{ form.visible_fields.1.errors }}
+	            {% endif %}
+	            {% if  form.visible_fields.2.errors%}
+	                <strong>Repeat new password</strong>
+	                {{ form.visible_fields.2.errors }}
+	            {% endif %}
+	        </div>
+	    {% endif %}
+	    <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
+	        <div class="row">
+	            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+	                <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator">
+	                    {% csrf_token %}
+	                    <div class="form-group">
+	                        <label for="id_old_password" class="control-label">Old password:</label>
+	                        {{ form.visible_fields.0 }}
+	                        <div class="help-block with-errors"></div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label for="id_password" class="control-label">New password:</label>
+	                        {{ form.visible_fields.1 }}
+	                        <div class="help-block with-errors"></div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label for="id_password_repeat" class="control-label">Repeat new password:</label>
+	                        {{ form.visible_fields.2 }}
+	                        <div class="help-block with-errors"></div>
+	                    </div>
+	                    {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
+	                    <div class="form-group">
+	                        <input class="btn btn-primary" value="Save Changes" type="submit">
+	                        <span></span>
+	                        <a href="/profile/{{ form.id.value }}" class="btn btn-default">Cancel</a>
+	                    </div>
+	                    <div class="alert alert-warning form-group" role="alert">
+	                        <i class="glyphicon glyphicon-warning-sign fa-1x"></i>
+	                        <strong>The passwords</strong> must contain at least one uppercase, a lowercase letter and a number.
+	                    </div>
+	                </form>
+	            </div>
+	        </div>
+	    </div>
     </div>
 </div>
 {%endblock%}
