Arreglada la p*** recompensa de monedas

--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -85,7 +85,7 @@
     <script>
     $("#duration-time").change(function(){
         var lead_time = $("#lead-time").val();
-        var duration_time = $("#duration-time").val()
+        var duration_time = $("#duration-time").val();
         if ( lead_time != " " && duration_time != " "){
             if ( duration_time < lead_time){
                 $("#duration-error").text("Duration time must be greater than the lead time");
