--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -60,10 +60,10 @@
                             <p>By giving feedback you enhance our algorithm. The more feedback it gets, the more accurate it becomes. We give you some coins as gift as well :)</p>
                             <hr>
                             <h4>Lead time: <small>How much time you spent waiting to buy the tickets, on the queue...</small></h4>
-                            <input id="lead-time" type="number" name="lead-time-value" min="0"/><span> min.</span>
+                            <input id="lead-time" type="number" name="lead-time-value" min="0" required/><span> min.</span>
                             <br>
                             <h4>Duration: <small>How much time you spent inside the venue, you were walking around...</small></h4>
-                            <input id="duration-time" type="number" name="duration-time-value" min="0"/><span> min.</span>
+                            <input id="duration-time" type="number" name="duration-time-value" min="0" required/><span> min.</span>
                             <div id="duration-error" class="help-block" style="color: #A94442"></div>
                             <br>
                             <h4>Description: <small>Something else you want to say?</small></h4>
@@ -87,8 +87,8 @@
         var lead_time = $("#lead-time").val();
         var duration_time = $("#duration-time").val();
         if ( lead_time != " " && duration_time != " "){
-            if ( duration_time < lead_time){
-                $("#duration-error").text("Duration time must be greater than the lead time");
+            if ( parseInt(duration_time) < parseInt(lead_time)){
+                $("#duration-error").text("Duration time must be greater than lead time");
                 $("#submit-comment").prop('disabled', true);
             }else{
                 $("#duration-error").empty();
